# SeigyOS

./: .gitignore  README.md  README_INITIAL.md
64bitOS/: CMakeLists.txt  compile.cmd  compile_all.cmd  compile_gcc.cmd  compile_mbr.cmd  compile_vs.cmd  info.txt  link.cmd  run.cmd  view_bootsector.cmd  view_kloader.cmd  view_mbr.cmd
64bitOS/boot/: bootsector.asm  bootsector_copy.asm  kloader.asm  kloader.ld  mbr.asm
64bitOS/include/FileSystems/: FileSystem.h  NativeFileSystem.h
64bitOS/src/: kloader.cpp  main.cpp
64bitOS/src/FileSystems/: NativeFileSystem.cpp
SeigyOS/: Directory.Build.props  SeigyOS.sln  SeigyOS.sln.DotSettings
SeigyOS/SeigyOS.Core/: IBuffer.cs  IReadOnlyBuffer.cs  SeigyOS.Core.csproj
SeigyOS/SeigyOS.Core/Devices/: IBlockDevice.cs
SeigyOS/SeigyOS.FileSystem/: IBlockDevice.cs  IBuffer.cs  IPartitionTable.cs  IReadOnlyBuffer.cs  SeigyOS.FileSystem.csproj
SeigyOS/SeigyOS.Primitives/: Memory.cs  NativeSize.cs  Pointer.cs  SeigyOS.Primitives.csproj
SeigyOS/Test/: ChsAddress.cs  Program.cs  Test.csproj
SeigyOS/mscorlib/: AccessViolationException.cs  Action.cs  Activator.cs  AggregateException.cs  AppDomain.cs  AppDomainInitializer.cs  AppDomainManager.cs  AppDomainManagerInitializationOptions.cs  AppDomainSetup.cs  AppDomainUnloadedException.cs  ApplicationException.cs  ApplicationId.cs  ArgIterator.cs  ArgumentException.cs  ArgumentNullException.cs  ArgumentOutOfRangeException.cs  ArithmeticException.cs  Array.cs  ArrayTypeMismatchException.cs  AssemblyLoadEventArgs.cs  AssemblyLoadEventHandler.cs  Attribute.cs  AttributeTargets.cs  AttributeUsageAttribute.cs  BadImageFormatException.cs  Base64FormattingOptions.cs  Boolean.cs  Byte.cs  CLSCompliantAttribute.cs  Char.cs  CharEnumerator.cs  Comparison.cs  ConsoleCancelEventArgs.cs  ConsoleCancelEventHandler.cs  ConsoleColor.cs  ConsoleKey.cs  ConsoleKeyInfo.cs  ConsoleModifiers.cs  ConsoleSpecialKey.cs  Convert.cs  (+91 more)
SeigyOS/mscorlib/Collections/: Comparer.cs  ICollection.cs  IDictionary.cs  IDictionaryEnumerator.cs  IEnumerable.cs  IEnumerator.cs  IEqualityComparer.cs  IHashCodeProvider.cs  IList.cs  IStructuralComparable.cs  IStructuralEquatable.cs
SeigyOS/mscorlib/Diagnostics/: ConditionalAttribute.cs  DebuggableAttribute.cs  Debugger.cs  DebuggerBrowsableAttribute.cs  DebuggerBrowsableState.cs  DebuggerDisplayAttribute.cs  DebuggerHiddenAttribute.cs  DebuggerNonUserCodeAttribute.cs  DebuggerStepThroughAttribute.cs  DebuggerStepperBoundaryAttribute.cs  DebuggerTypeProxyAttribute.cs  DebuggerVisualizerAttribute.cs  StackFrame.cs  StackTrace.cs
SeigyOS/mscorlib/Globalization/: Calendar.cs  CalendarAlgorithmType.cs  CalendarWeekRule.cs  CharUnicodeInfo.cs  CompareOptions.cs  CultureInfo.cs  CultureNotFoundException.cs  CultureTypes.cs  DateTimeFormatInfo.cs  DateTimeStyles.cs  DaylightTime.cs  DigitShapes.cs  GregorianCalendarTypes.cs  NumberFormatInfo.cs  NumberStyles.cs  TimeSpanFormat.cs  TimeSpanParse.cs  UnicodeCategory.cs
SeigyOS/mscorlib/Properties/: AssemblyInfo.cs
SeigyOS/mscorlib/Reflection/: Assembly.cs  AssemblyAlgorithmIdAttribute.cs  AssemblyCompanyAttribute.cs  AssemblyConfigurationAttribute.cs  AssemblyContentType.cs  AssemblyCopyrightAttribute.cs  AssemblyCultureAttribute.cs  AssemblyDefaultAliasAttribute.cs  AssemblyDelaySignAttribute.cs  AssemblyDescriptionAttribute.cs  AssemblyFileVersionAttribute.cs  AssemblyName.cs  (+56 more)
(+314 files in other folders)
